fix z-index on track submit form

--- a/css/main-view.less
+++ b/css/main-view.less
@@ -40,6 +40,7 @@ body {
 
 .submit-track-wrapper {
   position: fixed;
+  z-index: 10;
   width: 50%;
 
   .submit-track {
